nx docker and database working

--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ API_TYPEORM_TYPE=postgres
 API_TYPEORM_PORT=5432
 API_TYPEORM_SYNC=true
 
-API_TYPEORM_HOSTNAME=127.0.0.1
+API_TYPEORM_HOSTNAME=pg_container
 API_TYPEORM_USERNAME=root
 API_TYPEORM_PASSWORD=root
 API_TYPEORM_DATABASE=simples_dev
