nx docker and database working

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,5 @@
 API_FILE=development-file
-API_SIMPLES_API_NAME=simples-api
-API_BASE_TYPEORM_TYPE=postgres
+API_NAME=simples-api
 API_TIMEZONE='America/Sao_Paulo'
 API_PORT=3000
 
