--- a/libs/apis/cruds/tsconfig.json
+++ b/libs/apis/cruds/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs"
   },
   "files": [],
-  "include": ["**/*.ts"],
+  "include": [],
   "references": [
     {
       "path": "./tsconfig.lib.json"
